Fixed the issue with flickering/flashing when opening a Dialog or any shadcn component that contains "data-[state=open]:animate-in" similar classes, bacause I had animate-in in global.css as it was conflicting

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,15 +70,11 @@
 
 @layer components {
   .pressable {
-    @apply inline-flex h-10 min-w-[7rem] items-center justify-center whitespace-nowrap rounded-md bg-green-600 px-4 py-2 text-sm font-medium text-white shadow-[0_7px] shadow-green-700 ring-offset-background transition-all hover:translate-y-1 hover:bg-green-700 hover:shadow-[0_5px] hover:shadow-green-900 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50;
+    @apply ring-offset-background focus-visible:ring-ring inline-flex h-10 min-w-[7rem] items-center justify-center whitespace-nowrap rounded-md bg-green-600 px-4 py-2 text-sm font-medium text-white shadow-[0_7px] shadow-green-700 transition-all hover:translate-y-1 hover:bg-green-700 hover:shadow-[0_5px] hover:shadow-green-900 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50;
   }
 
   .animate-float {
     animation: float 6s ease-in-out infinite;
-  }
-
-  .animate-in {
-    animation-delay: 200ms;
   }
 
   @keyframes float {
