--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,7 +69,7 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply overscroll-none bg-background text-foreground;
   }
 
   .rtl {
