--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
+  --font-sans:
+    var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-noto-kufi: var(--font-noto-kufi);
 
@@ -178,6 +179,10 @@
 
   .ltr {
     direction: ltr;
+  }
+
+  li {
+    @apply list-none;
   }
 
   ::-webkit-scrollbar {
